--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,16 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0-M5</version>
+				<configuration>
+					<includes>
+						<include>%regex[.*Tests.*]</include>
+					</includes>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
